--- a/app/frontend/src/app/pages/contract-vehicles/hcats.component.html
+++ b/app/frontend/src/app/pages/contract-vehicles/hcats.component.html
@@ -1,99 +1,124 @@
-<div class="usa-grid pad-top-bottom">
-  <div class="usa-width-one-whole">
+<main id="main-content">
+  <section class="usa-hero">
+    <div class="usa-grid text-center">
+      <h1>HcaTS</h1>
+      <h3>Human Capital and Training Solutions</h3>
+    </div>
+  </section>
 
-    <h1>Human Capital and Training Solutions (HCaTS)</h1>
+  <section class="usa-section">
+    <div class="usa-grid">
+      <div class="usa-width-one-sixth best-in-class"></div>
+      <div class="usa-width-two-thirds">
+        <p class="usa-font-lead">The HCaTS Program is the result of partnership between Office of Personnel Management
+          (OPM) and General Services Administration (GSA). HCaTS is comprised of two indefinite-delivery
+          indefinite-quantity (IDIQ) governmentwide contract vehicles: HCaTS and HCaTS SB. These vehicles provide
+          reliable, flexible, fast and efficient ways to obtain the best value customized solutions for human capital
+          management and training requirements.
 
-  </div>
+        </p>
+        <ul class="usa-font-lead">
+          <li><strong>Best-in-Class</strong></li>
+          <li>Provides customized Training and Development, Human Capital Strategy, and Organizational Performance
+            Improvement Services</li>
+          <li>Highest Technically Rated with Fair and Reasonable (HTR-FRP) Contractors that have been pre-screened by
+            HC
+            specialists</li>
+          <li>Leveraged Category and Performance Management Strength</li>
+          <li>Allows ancillary services & other direct costs at the task order level
+          </li>
+        </ul>
+      </div>
+    </div>
+  </section>
 
-</div>
-<div class="usa-grid">
+  <section class="usa-section">
+    <div class="usa-grid">
+      <div class="usa-width-one-half">
+        <h3>HCaTS and HCaTS SB Pool Disciplines</h3>
+        <div *ngIf="pools.length===0">Loading...</div>
+        <ul *ngIf="pools.length>0">
+          <li *ngFor="let pool of pools"><a [routerLink]="['/search']" [queryParams]="{vehicles: 'HCATS', service_categories: pool.id}">{{pool.name}}</a></li>
+        </ul>
+      </div>
+      <div class="usa-width-one-half">
+        <h3>OASIS Links:</h3>
+        <ul>
+          <li><a href="https://www.gsa.gov/acquisition/products-services/human-capital/human-capital-and-training-solutions"
+              target="_blank">HCaTS Home Page</a></li>
+          <li><a href="https://www.gsa.gov/cdnstatic/HCaTS Ordering Guide - Rev 15  Aug 2018.pdf" target="_blank">HCaTS
+              Ordering Guide</a></li>
+          <li><a href="https://www.gsa.gov/acquisition/products-services/human-capital/hcats-and-hcats-small-business/hcats-training"
+              target="_blank">HCaTS Training</a></li>
+          <li><a href="https://www.gsa.gov/acquisition/products-services/human-capital/hcats-and-hcats-small-business/hcats-resource-directory"
+              target="_blank">HCaTS Contract(s)</a></li>
+          <li><a href="mailto:hcats@gsa.gov" target="_blank">Contact HCaTS</a></li>
+          <li><a href="mailto:sbhcats@gsa.gov" target="_blank">Contact HCaTS SB</a></li>
+        </ul>
 
-  <div class="usa-width-two-thirds bordered pad-all margin-bottom">
-    <p>HCaTS Program is the result of partnership between Office of Personnel Management (OPM) and General Services Administration
-      (GSA). HCaTS is comprised of two indefinite-delivery indefinite-quantity (IDIQ) governmentwide contract vehicles: HCaTS
-      and HCaTS SB. These vehicles provide reliable, flexible, fast and efficient ways to obtain the best value customized
-      solutions for human capital management and training requirements.</p>
-    <p>HCaTS contracts provide solutions to all federal agencies through the effort of bona-fide executive, administrative,
-      and professional employees as defined in Part 541 of Title 29, Code of Federal Regulations (CFR).</p>
+      </div>
+    </div>
+  </section>
+  <!-- <section class="usa-section">
+      <div class="usa-grid">
+        <h3>Recent Contract Actions on OASIS SB</h3>
+        <table class="usa-table-borderless">
+          <thead>
+            <tr>
+              <th scope="col">Date Signed</th>
+              <th scope="col">PIID</th>
+              <th scope="col">Agency</th>
+              <th scope="col">Company Name</th>
+              <th scope="col">Type</th>
+              <th scope="col">Value ($)</th>
+              <th scope="col">Status</th>
+              <th scope="col">NAICS</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th scope="row">9/10/2015</th>
+              <td>####</td>
+              <td>Agency name</td>
+              <td>Company name</td>
+              <td>Type</td>
+              <td>$$$</td>
+              <td>Status here</td>
+              <td>Codes here</td>
+            </tr>
+            <tr>
+              <th scope="row">9/10/2015</th>
+              <td>####</td>
+              <td>Agency name</td>
+              <td>Company name</td>
+              <td>Type</td>
+              <td>$$$</td>
+              <td>Status here</td>
+              <td>Codes here</td>
+            </tr>
+            <tr>
+              <th scope="row">9/10/2015</th>
+              <td>####</td>
+              <td>Agency name</td>
+              <td>Company name</td>
+              <td>Type</td>
+              <td>$$$</td>
+              <td>Status here</td>
+              <td>Codes here</td>
+            </tr>
+            <tr>
+              <th scope="row">9/10/2015</th>
+              <td>####</td>
+              <td>Agency name</td>
+              <td>Company name</td>
+              <td>Type</td>
+              <td>$$$</td>
+              <td>Status here</td>
+              <td>Codes here</td>
+            </tr>
 
-
-    <p><strong>HCaTS Pools</strong></p>
-    <ul>
-      <li>Info goes here</li>
-      <li>Info goes here</li>
-      <li>Info goes here</li>
-      <li>Info goes here</li>
-    </ul>
-    <table class="usa-table-borderless">
-      <caption>Recent Contract Actions on HCaTS</caption>
-      <thead>
-        <tr>
-          <th scope="col">Date Signed</th>
-          <th scope="col">PIID</th>
-          <th scope="col">Agency</th>
-          <th scope="col">Company Name</th>
-          <th scope="col">Type</th>
-          <th scope="col">Value ($)</th>
-          <th scope="col">Status</th>
-          <th scope="col">NAICS</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <th scope="row">9/10/2015</th>
-          <td>####</td>
-          <td>Agency name</td>
-          <td>Company name</td>
-          <td>Type</td>
-          <td>$$$</td>
-          <td>Status here</td>
-          <td>Codes here</td>
-        </tr>
-        <tr>
-          <th scope="row">9/10/2015</th>
-          <td>####</td>
-          <td>Agency name</td>
-          <td>Company name</td>
-          <td>Type</td>
-          <td>$$$</td>
-          <td>Status here</td>
-          <td>Codes here</td>
-        </tr>
-        <tr>
-          <th scope="row">9/10/2015</th>
-          <td>####</td>
-          <td>Agency name</td>
-          <td>Company name</td>
-          <td>Type</td>
-          <td>$$$</td>
-          <td>Status here</td>
-          <td>Codes here</td>
-        </tr>
-        <tr>
-          <th scope="row">9/10/2015</th>
-          <td>####</td>
-          <td>Agency name</td>
-          <td>Company name</td>
-          <td>Type</td>
-          <td>$$$</td>
-          <td>Status here</td>
-          <td>Codes here</td>
-        </tr>
-
-      </tbody>
-    </table>
-  </div>
-  <div class="usa-width-one-third bordered pad-all">
-    <h3 class="underline">HCaTS Links</h3>
-    <ul>
-      <li><a href="#">HCaTS Customer Support</a></li>
-      <li><a href="#">HCaTS Ordering Guide</a></li>
-      <li><a href="#">HCaTS Contracts</a></li>
-      <li><a href="#">Upcoming Trainings</a></li>
-      <li><a href="#">NAICS Codes per Pool</a></li>
-      <li><a href="#">HCaTS FAQs</a></li>
-    </ul>
-    <button class="usa-button-secondary">More about HCaTS</button>
-  </div>
-
-</div>
+          </tbody>
+        </table>
+      </div>
+    </section> -->
+</main>
