--- a/app/frontend/src/app/pages/search/filters.component.html
+++ b/app/frontend/src/app/pages/search/filters.component.html
@@ -1,9 +1,8 @@
-<h3 class="underline">
+<h3 class="underline alt">
   <span class="icon-filter"></span>Filters</h3>
 <button type="button" [disabled]="disabled_btn" class="primary" (click)="emmitSelectedFilters()">Submit</button>
 <button type="button" class="link" (click)="resetFilters()">Reset</button>
 <div class="cb" style="display: block;clear:both"></div>
-
 <ul class="usa-accordion" aria-multiselectable="true">
   <li>
     <discovery-filter-keywords (emmitSelected)="activateSubmit($event)" (emmitLoaded)="getResults($event)"></discovery-filter-keywords>
