--- a/app/frontend/src/app/pages/search/search.component.html
+++ b/app/frontend/src/app/pages/search/search.component.html
@@ -21,12 +21,12 @@
         <ul class="nav nav-tabs" role="tablist">
           <li role="presentation" [class.active]="vw_contracts">
             <a aria-controls="contracts" role="tab" data-toggle="tab" (click)="viewContracts()">
-              <h3>Contracts</h3>
+              <h3 class="alt">Contracts</h3>
             </a>
           </li>
           <li role="presentation" [class.active]="vw_vendors">
             <a aria-controls="vendors" role="tab" data-toggle="tab" (click)="viewVendors()">
-              <h3>Vendors</h3>
+              <h3 class="alt">Vendors</h3>
             </a>
           </li>
         </ul>
@@ -38,11 +38,21 @@
 
             <!-- Contracts results -->
             <div *ngIf="vw_contracts">
-              <div *ngIf="vendors_no_results">
-                <h2>No results based on your criteria</h2>
-                <p>Please change your criteria and re-submit.</p>
+              <div class="usa-alert usa-alert-info" *ngIf="vendors_no_results">
+                <div class="usa-alert-body">
+                  <h3 class="usa-alert-heading">No results based on your criteria</h3>
+                  <p class="usa-alert-text">Please change your criteria and re-submit.</p>
+                </div>
               </div>
               <div class="overflow" *ngIf="!vendors_no_results">
+                <div class="usa-alert usa-alert-info" *ngIf="contracts_w_no_records.length>0">
+                  <div class="usa-alert-body">
+                    <h3 class="usa-alert-heading">There are no vendor results for:
+                    </h3>
+                    <strong class="db" [innerHTML]="commaSeparatedList(contracts_w_no_records, 'name')"></strong>
+                    <p class="usa-alert-text">Please change your criteria and re-submit.</p>
+                  </div>
+                </div>
                 <table class="usa-table-borderless">
                   <thead>
                     <tr>
@@ -74,10 +84,10 @@
                           [key]="'name'"></discovery-list>
                       </td>
                     </tr>
-                    <tr>
+                    <!-- <tr>
                       <th scope="row">Top capabilities</th>
                       <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0">{{vehicle.capabilities}}</td>
-                    </tr>
+                    </tr> -->
                     <tr>
                       <th scope="row">NAICs</th>
                       <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0">
@@ -88,7 +98,7 @@
                       <th scope="row">PSCs</th>
                       <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0">{{vehicle.pscs}}</td>
                     </tr>
-                    <tr>
+                    <!-- <tr>
                       <th scope="row">SUM Tier</th>
                       <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0">{{vehicle.tier}}</td>
                     </tr>
@@ -103,16 +113,18 @@
                     <tr>
                       <th scope="row">Ordering Guide</th>
                       <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0">{{vehicle.ordering_guide}}</td>
-                    </tr>
+                    </tr> -->
                   </tbody>
                 </table>
               </div>
             </div>
             <!-- Vendors results -->
             <div *ngIf="vw_vendors">
-              <div *ngIf="vendors_no_results">
-                <h2>No results based on your criteria</h2>
-                <p>Please change your criteria and re-submit.</p>
+              <div class="usa-alert usa-alert-info" *ngIf="vendors_no_results">
+                <div class="usa-alert-body">
+                  <h3 class="usa-alert-heading">No results based on your criteria</h3>
+                  <p class="usa-alert-text">Please change your criteria and re-submit.</p>
+                </div>
               </div>
               <div *ngIf="!vendors_no_results">
                 <div class="usa-grid-full">
