--- a/app/frontend/src/app/pages/search/vendor-detail.component.html
+++ b/app/frontend/src/app/pages/search/vendor-detail.component.html
@@ -4,7 +4,8 @@
 <div class="well">
   <div class="usa-grid col-container pad-top-bottom">
     <div *ngIf="vendor" class="usa-width-one-whole">
-      <div class="pad-all"><a [routerLink]="['/search']" queryParamsHandling="preserve">Back to search
+      <div class="pad-all"><a [routerLink]="['/search']" queryParamsHandling="preserve" class="back"><span class="icon-arrow-left pull-left"></span>Back
+          to search
           results</a>
         <h2>{{vendor.name | titlecase}}</h2>
         <hr>
@@ -44,14 +45,16 @@
         <div class="pad-top">
           <hr>
           <div class="usa-width-one-whole pad-top">
-            <div class="overflow">
-              <a (click)="toggleSBD()" class="btn-toggle pull-right">{{!sbd_col ? 'Show' : 'Hide'}} Set Asides</a>
+            <div>
+
+              <div class="text-right"><a (click)="toggleSBD()" class="btn-toggle">{{!sbd_col ?
+                  'Show' : 'Hide'}} Set Asides</a></div>
 
               <table class="usa-table-borderless">
                 <caption>Choose one or more to show only contract history for that selection</caption>
                 <thead>
                   <tr>
-                    <th></th>
+                    <!-- <th></th> -->
                     <th scope="col">Contract Membership</th>
                     <th scope="col" class="sbd">Contact Info</th>
                     <th scope="col" [class.hide]="!sbd_col" class="sbd tooltip-bottom" data-tooltip="Small Disadvantaged Business">SB</th>
@@ -67,12 +70,17 @@
                   </tr>
                 </thead>
                 <tbody>
-                  <tr *ngFor="let item of vendor.pools">
-                    <td></td>
+                  <tr *ngFor="let item of vendor.pools; let i = index">
+                    <!-- <td class="relative td-checkbox">
+                      <input (change)="onChange(item.piid, $event.target.checked)" name="contracts" type="checkbox"
+                        value="{{item.piid}}">
+                    </td> -->
                     <td scope="row"><strong class="db" [innerHTML]="getVehicleDescription(item.pool.vehicle.id)"></strong>
                       <blockquote><span class="uppercase db">Contract Number: </span><strong class="pad-left">{{item.piid}}</strong></blockquote>
-                      <blockquote><span class="uppercase db">Service Categories: </span><strong class="pad-left db"
-                          *ngFor="let cat of item.service_categories" [innerHTML]="getServiceCategoryDescription(cat.id)"></strong></blockquote>
+                      <blockquote><span class="uppercase db">Service Categories: </span>
+                        <!-- <discovery-list [id]="'ul-serv_cat-'+i" [items_to_show]="num_show" [items]="item.service_categories"
+                          [key]="'name'"></discovery-list> -->
+                        <strong class="pad-left db" *ngFor="let cat of item.service_categories" [innerHTML]="getServiceCategoryDescription(cat.id)"></strong></blockquote>
                       <blockquote><span class="uppercase db">Zone(s): </span><strong class="pad-left" [innerHTML]="getZones(item.zones)"></strong></blockquote>
                     </td>
                     <td [innerHTML]="getContactInfo(item.contacts)"></td>
@@ -92,7 +100,7 @@
             </div>
 
             <!-- Contract History -->
-            <discovery-tbl-contract-history [duns]="duns"></discovery-tbl-contract-history>
+            <discovery-tbl-contract-history [contract_vehicles]="contract_vehicles" [pools]="vendor.pools" [duns]="duns"></discovery-tbl-contract-history>
           </div>
         </div>
 
