--- a/app/frontend/src/app/pages/search/search.component.html
+++ b/app/frontend/src/app/pages/search/search.component.html
@@ -57,7 +57,7 @@
                   <thead>
                     <tr>
                       <th scope="col"></th>
-                      <th scope="col" *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0">{{vehicle.description}}
+                      <th scope="col" class="th-vehicle" *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0">{{vehicle.description}}
                         <!--<span
                             class="info-tip"></span>-->
                       </th>
@@ -78,10 +78,15 @@
                           *ngIf="vehicle.vendors_results_total!=0" (click)="viewVehicleVendors(vehicle.id)">{{vehicle.vendors_results_total}}</button></td>
                     </tr>
                     <tr>
-                      <th scope="row">Eligible Service category(s)</th>
+                      <th scope="row">Eligible Service category(s) <discovery-lnk-toggle-heights [toggle_id]="'row-serv-cat'"
+                          [label]="'categories'" (emitToggleId)="toggleTDHeights($event)"></discovery-lnk-toggle-heights>
+                      </th>
                       <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0">
-                        <discovery-list [id]="vehicle.id" [items_to_show]="num_show" [items]="vehicle.service_categories"
-                          [key]="'name'"></discovery-list>
+                        <div class="row-serv-cat toggle_more">
+                          <discovery-list [show_all]="true" [id]="vehicle.id" [items_to_show]="num_show" [items]="vehicle.service_categories"
+                            [key]="'name'"></discovery-list>
+                          <div class="gradient"></div>
+                        </div>
                       </td>
                     </tr>
                     <!-- <tr>
@@ -89,9 +94,15 @@
                       <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0">{{vehicle.capabilities}}</td>
                     </tr> -->
                     <tr>
-                      <th scope="row">NAICs</th>
+                      <th scope="row">NAICs <discovery-lnk-toggle-heights [toggle_id]="'row-naics'" [label]="'NAIC codes'"
+                          (emitToggleId)="toggleTDHeights($event)"></discovery-lnk-toggle-heights>
+                      </th>
                       <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0">
-                        <discovery-list [id]="vehicle.id" [items_to_show]="num_show" [items]="vehicle.naics" [key]="'code'"></discovery-list>
+                        <div class="row-naics toggle_more">
+                          <discovery-list [show_all]="true" [id]="vehicle.id" [items_to_show]="num_show" [items]="vehicle.naics"
+                            [key]="'code'"></discovery-list>
+                          <div class="gradient"></div>
+                        </div>
                       </td>
                     </tr>
                     <tr>
